--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <title>SecureTyping</title>
+    <meta charset="UTF-8">
+    <meta name="robots" content="noindex">
+    <meta name="author" content="tippy">
+    <title>Secure-typing</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="icon" href="<%= asset_pack_path 'media/images/negi.png' %>">
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="<%= @current_user? '/mypage' : '/' %>">Secure-typing</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <% if @current_user %>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item<%= ' active' if request.path_info == '/mypage' %>"><%= link_to "My Page", "/mypage", class: "nav-link" %></li>
+                <li class="nav-item<%= ' active' if request.path_info == '/settings' %>"><%= link_to "Account Settings" , "/settings", class: "nav-link" %></li>
+                <% if @current_user.admin %>
+                  <li class="nav-item<%= ' active' if controller_name=='admin' %>"><%= link_to "Admin", "/admin/users", class: "nav-link" %></li>
+                <% end %>
+            </ul>
+            <ul class="navbar-nav">
+              <span class="navbar-text mr-2 text-light"><%= @current_user.name %></span>
+              <li class="nav-item"><%= link_to "ログアウト", "/logout", method: :post, class: "btn btn-outline-danger my-2 my-sm-0" %></li>
+            </ul>
+          <% else %>
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item<%= ' active' if request.path_info == '/' %>"><%= link_to "HOME", "/", class: "nav-link" %></li>
+              <li class="nav-item<%= ' active' if request.path_info == '/login' %>"><%= link_to "Log in", "/login", class: "nav-link" %></li>
+              <li class="nav-item<%= ' active' if request.path_info == '/signup' %>"><%= link_to "Sign up", "/signup", class: "nav-link" %></li>
+            </ul>
+          <% end %>
+        </div>
+      </nav>
+    </header>
+
+    <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %> alert-dismissible fade show text-center" role="alert">
+        <%= message %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    <% end %>
+
+    <div class="container mt-4">
+      <%= yield %>
+      <hr>
+      <p class="text-muted">© 2020 tippy</p>
+    </div>
+
   </body>
 </html>
