--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Secure Typing</h1>
+<h2>What's this?</h2>
+<p>日本語のタイピングゲームです</p>
+<p>Webスクレイピングモデル「Swapfont」を利用しています。</p>
+
+<h2>現在ベータ公開中</h2>
+<p>2020年2月中旬にデータをすべて削除しますのでご了承ください。</p>
