--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -21,3 +21,5 @@
   </div>
   <input type="submit" class="form-control btn btn-primary mb-2" value="サインアップ">
 <% end %>
+
+<p>パスワードはハッシュ化していますが、通信がHTTPSではないので、普段お使いのパスワードは入れないほうがいいと思います。</p>
