--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Games#show</h1>
-<p>Find me in app/views/games/show.html.erb</p>
+<h1>タイピングゲーム</h1>
+<p><%= @text %></p>
+<p><span class="swapped-font"><%= @new_text %></span></p>
+<p><%= @serial_num %></p>
